<resources>
    <string name="app_name">admin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>


    <string name="clothes">Clothes</string>
    <string name="accessories">Accessories</string>
    <string name="shoes">Shoes</string>
    <string name="fashion">Clothes</string>
    <string name="promotion">Promotions</string>
    <string name="complains">Complains</string>
    <string name="notify">Send Notification</string>
    <string name="title_activity_promotion">Promotions</string>
    <string name="edit">Edit</string>
    <string name="sendnotificationtitle">Title</string>
    <string name="sendnotificationdescription">Description</string>
    <string name="send">Send</string>
    <string name="addnewcloth">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="discount">Discount</string>
    <string name="prize">Prize</string>
    <string name="name">Product Name</string>
    <string name="price">$300</string>
    <string name="jeans">Jeans</string>
    <string name="shirts">Shirts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">TItle</string>


    <!--    Demo -->


    <string name="value_any_category">All food</string>
    <string name="value_any_city">Anywhere</string>
    <string name="value_any_price">Any price</string>

    <string name="price_1">$</string>
    <string name="price_2">$$</string>
    <string name="price_3">$$$</string>

    <string name="label_category">Category</string>
    <string name="label_city">City</string>
    <string name="label_price">Price</string>
    <string name="label_sort_by">Sort By</string>

    <string name="fmt_num_ratings" translatable="false">(%d)</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="header_filters">Filter</string>
    <string name="search">Search</string>

    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_price">Sort by Price</string>

    <string name="sorted_by_rating">sorted by rating</string>
    <string name="sorted_by_price">sorted by price</string>
    <string name="sorted_by_popularity">sorted by popularity</string>

    <string name="add_random_items">Add Random Items</string>
    <string name="sign_out">Sign Out</string>
    <string name="divider_bullet">•</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your filter</string>
    <string name="message_no_reviews">Be the first to leave a review!</string>
    <string name="hint_review">How was your experience?</string>
    <string name="submit">Submit</string>
    <string name="filter_add_review">Add review</string>

    <string name="title_sign_in_error">Sign In Error</string>
    <string name="message_no_network">No network connection.</string>
    <string name="message_unknown">Unknown error.</string>
    <string name="option_retry">Retry</string>
    <string name="option_exit">Exit</string>

    <!-- Types of food I could think of in 5 minutes -->
    <string-array name="categories">
        <item>@string/value_any_category</item>

        <item>Brunch</item>
        <item>Burgers</item>
        <item>Coffee</item>
        <item>Deli</item>
        <item>Dim Sum</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Ramen</item>
        <item>Sushi</item>
    </string-array>
    ite

    <!-- 50 most populous cities in the US -->
    <string-array name="cities">
        <item>@string/value_any_city</item>

        <item>Albuquerque</item>
        <item>Arlington</item>
        <item>Atlanta</item>
        <item>Austin</item>
        <item>Baltimore</item>
        <item>Boston</item>
        <item>Charlotte</item>
        <item>Chicago</item>
        <item>Cleveland</item>
        <item>Colorado Springs</item>
        <item>Columbus</item>
        <item>Dallas</item>
        <item>Denver</item>
        <item>Detroit</item>
        <item>El Paso</item>
        <item>Fort Worth</item>
        <item>Fresno</item>
        <item>Houston</item>
        <item>Indianapolis</item>
        <item>Jacksonville</item>
        <item>Kansas City</item>
        <item>Las Vegas</item>
        <item>Long Beach</item>
        <item>Los Angeles</item>
        <item>Louisville</item>
        <item>Memphis</item>
        <item>Mesa</item>
        <item>Miami</item>
        <item>Milwaukee</item>
        <item>Nashville</item>
        <item>New York</item>
        <item>Oakland</item>
        <item>Oklahoma</item>
        <item>Omaha</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>Portland</item>
        <item>Raleigh</item>
        <item>Sacramento</item>
        <item>San Antonio</item>
        <item>San Diego</item>
        <item>San Francisco</item>
        <item>San Jose</item>
        <item>Tucson</item>
        <item>Tulsa</item>
        <item>Virginia Beach</item>
        <item>Washington</item>
    </string-array>

    <!-- Price filters -->
    <string-array name="prices">
        <item>@string/value_any_price</item>

        <item>@string/price_1</item>
        <item>@string/price_2</item>
        <item>@string/price_3</item>
    </string-array>

    <!-- Ways you can sort restaurants -->
    <string-array name="sort_by">
        <item>@string/sort_by_rating</item>
        <item>@string/sort_by_popularity</item>
        <item>@string/sort_by_price</item>
    </string-array>
</resources>
