<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <data class="HomeDataBinding">
        <import type="image.crystalapps.ekommerceAdmin.ui.notification.SendNotification"/>
        <import type="android.view.View"/>



        <variable
            name="viewModel"
            type="image.crystalapps.ekommerceAdmin.ui.mainactivity.MainViewModel" />

    </data>

   <FrameLayout
    android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:context=".ui.mainactivity.fragments.home.Home"

       >

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_gravity="center"

        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"
            android:id="@+id/fashion"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="26dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imageview1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_suit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fashion"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"
            android:id="@+id/accessories"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="26dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/white"

                >

                <ImageView
                    android:id="@+id/imageview2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_sunglasses"


                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accessories"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"  />


            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"
            android:id="@+id/shoes"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="26dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/white"

                >

                <ImageView
                    android:id="@+id/imageview4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/shoe"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/shoes"
                    android:textColor="@color/black" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"
            android:id="@+id/promotion"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="26dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/white"
                >

                <ImageView
                    android:id="@+id/imageview3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/shoe"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/promotion"
                    android:textColor="@color/black" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"
            android:id="@+id/complain"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="26dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/white"

                >

                <ImageView
                    android:id="@+id/imageview5"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/shoe"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/complains"
                    android:textColor="@color/black" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"
            android:id="@+id/sendnotification"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="26dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/white"

                >

                <ImageView
                    android:id="@+id/imageview6"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/send_notification"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/notify"
                    android:textColor="@color/black" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </GridLayout>
    </FrameLayout>
</layout>