<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mainactivity.fragments.mens.MenFashion">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/androidstyle"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5"
                />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="24dp"
                android:text="@string/sendnotificationtitle"
                android:textColor="@color/secondaryTextColor"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.043"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maintoolbar" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleeditTextLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                app:counterEnabled="true"
                app:counterMaxLength="50">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleeditText"
                    android:layout_width="376dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/titlestyle"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:paddingLeft="8dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.485"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/maintoolbar"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"

                android:text="@string/sendnotificationdescription"
                android:textColor="@color/secondaryTextColor"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maintoolbar" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptioneditTextLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                app:counterEnabled="true"
                app:counterMaxLength="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptioneditText"
                    android:layout_width="376dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/titlestyle"
                    android:gravity="left"
                    android:maxLength="100"
                    android:minHeight="100dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/secondaryTextColor"


                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.457"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/maintoolbar" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"

                android:text="@string/prize"
                android:textColor="@color/secondaryTextColor"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maintoolbar" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceditTextLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceditText"
                    android:layout_width="376dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/titlestyle"
                    android:gravity="left"
                    android:maxLength="7"
                    android:maxLines="1"
                    android:paddingLeft="8dp"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/secondaryTextColor"

                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.457"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/maintoolbar" />

            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"

                >

                <RadioButton
                    android:id="@+id/jeans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jeans" />

                <RadioButton
                    android:id="@+id/shirts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shirts" />

                <RadioButton
                    android:id="@+id/shoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoes" />


            </RadioGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"

                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="Sizes :" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sizes"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/titlestyle"
                android:maxLength="50"
                android:layout_marginTop="18dp"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maintoolbar" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add"
                android:text="Add"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:background="@drawable/send_button"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>